[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Ouro.gd" type="Script" id=1]
[ext_resource path="res://Assets/SFX/gold.wav" type="AudioStream" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11, 10 )

[node name="Ouro" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0

[connection signal="body_entered" from="." to="." method="_on_Ouro_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
